new file:   .gitignore 	modified:   README.md 	new file:   vocab/Dockerfile 	modified:   vocab/credentials.ini

--- a/vocab/credentials.ini
+++ b/vocab/credentials.ini
@@ -9,3 +9,5 @@ secret_key = Replace this with random string; os.urandom can make one
 success_at_count = 3  
 # Where is the vocabulary file (relative to sources)
 vocab = data/first_grade.txt
+Author = Qianyi Feng
+repo = https://github.com/Qfeng1021/proj3-JSA.git
